--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 --upgrade pip
+pennylane==0.34
+pennylane-lightning==0.34
 pandas
 numpy
 matplotlib
@@ -10,5 +12,3 @@ gdal
 branca
 jinja2
 ipython
-pennylane
-pennylane-lightning
